第三弾コーディング追加

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -10,7 +10,11 @@ title: 平成Ruby会議 01
 
 
 <section class="keyVisual">
+
   <div class="keyVisual_inner">
+        <!-- <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div> -->
     <header class="header">
       <div class="header_inner">
         <div class="logo_s">
@@ -204,7 +208,7 @@ title: 平成Ruby会議 01
 <section id="speakers" class="speakers container">
   <h2 class="ttl_main">Keynote Speakers</h2>
   <div class="speakers_wrapper">
-    <div class="speakers_item">
+    <div class="speakers_item __item_01">
       <div><img class="speakers_thm" src="{{ '/assets/kaigi01/thm_speaker01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""></div>
       <p>Junichi Ito</p>
       <div class="icon_wrapper">
@@ -212,7 +216,7 @@ title: 平成Ruby会議 01
         <a href="" target="_blank"><img class="icon_github" src="{{ '/assets/kaigi01/icon_github.svg?v=' | append: site.github.build_revision | relative_url }}" alt="github"></a>
       </div>
     </div>
-    <div class="speakers_item">
+    <div class="speakers_item __item_02">
       <div><img class="speakers_thm" src="{{ '/assets/kaigi01/thm_speaker02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""></div>
       <p>fuqda</p>
       <div class="icon_wrapper">
@@ -694,7 +698,7 @@ title: 平成Ruby会議 01
     </div><!-- .organizers_item -->
     <div class="organizers_item">
       <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/thm_organizers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
+        <img src="{{ '/assets/kaigi01/thm_organizers02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
       </figure>
       <p class="organizers_txt"><a href="" target="_blank">@tashiro_rb</a></p>
     </div><!-- .organizers_item -->
@@ -706,7 +710,7 @@ title: 平成Ruby会議 01
     </div><!-- .organizers_item -->
     <div class="organizers_item">
       <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/thm_organizers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
+        <img src="{{ '/assets/kaigi01/thm_organizers02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
       </figure>
       <p class="organizers_txt"><a href="" target="_blank">@tashiro_rb</a></p>
     </div><!-- .organizers_item -->
