--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -5,16 +5,13 @@ title: 平成Ruby会議 01
 ---
 
 
-<canvas class="bg_canvas">
-</canvas>
-
-
 <section class="keyVisual">
-
   <div class="keyVisual_inner">
-        <!-- <div id="stars"></div>
-        <div id="stars2"></div>
-        <div id="stars3"></div> -->
+
+    <div class="bg bg_filter"></div>
+    <div class="bg bg_particle" id="particles_js"></div>
+    <div class="bg bg_gradient"></div>
+
     <header class="header">
       <div class="header_inner">
         <div class="logo_s">
@@ -37,7 +34,7 @@ title: 平成Ruby会議 01
             <li class="header_nav_item btn_nav btn_comming"><a href="" target="_blank">registration</a></li>
           </ul>
         </nav>
-      </div>
+      </div><!--.header_inner-->
     </header>
 
     <div class="visual">
@@ -790,5 +787,6 @@ title: 平成Ruby会議 01
 
 
 <!-- scripts -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
+<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
 <script src="{{ '/assets/js/kaigi01.js?v=' | append: site.github.build_revision | relative_url }}"></script>
