shapeパターン追加

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -31,7 +31,9 @@ title: 平成Ruby会議 01
             <li class="header_nav_item">
               <p onclick="smoothScroll(document.getElementById('spns'))">sponsors</p>
             </li>
-            <li class="header_nav_item btn_nav btn_comming"><a href="" target="_blank">registration</a></li>
+            <li class="header_nav_item btn_nav btn_comming">
+              <a href="" target="_blank">registration</a>
+            </li>
           </ul>
         </nav>
       </div><!--.header_inner-->
@@ -199,6 +201,9 @@ title: 平成Ruby会議 01
       <br>みなさまのご参加を心よりお待ちしています。
     </p>
   </article>
+  <div class="shape shape_01"></div>
+  <div class="shape shape_02"></div>
+  <div class="shape shape_03"></div>
 </section>
 
 
@@ -222,6 +227,7 @@ title: 平成Ruby会議 01
       </div>
     </div>
   </div>
+  <div class="shape shape_05"></div>
 </section>
 
 
@@ -627,6 +633,8 @@ title: 平成Ruby会議 01
       </div>
     </div><!--schedules_main-->
   </div><!--schedules_cont-->
+  <div class="shape shape_06"></div>
+  <div class="shape shape_07"></div>
 </section>
 
 
@@ -679,8 +687,10 @@ title: 平成Ruby会議 01
     </div><!--.spns_item-->
   </div>
   <div class="btn_main">
-    <a href="">become a sponsor</a>
+    <a href="" target="_blank">become a sponsor</a>
   </div>
+  <div class="shape shape_08"></div>
+  <div class="shape shape_04"></div>
 </section>
 
 
