外部リンク追加

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -737,30 +737,30 @@ title: 平成Ruby会議 01
     <h2><img class="stores_logo" src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp"></h2>
     <h3>Rubyエンジニアを募集しています！</h3>
     <div class="btn_main">
-      <a href="" target="_blank">採用ページはこちら</a>
+      <a href="https://hey.jp/jobs/" target="_blank">採用ページはこちら</a>
     </div>
     <div class="stores_col">
       <div>
-        <a href="" target="_blank">
-          <figure class="stores_col_thm"><img src="{{ '/assets/kaigi01/thm_stores01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp"></figure>
+        <a href="https://hey.jp/events/hello-hey/" target="_blank">
+          <figure class="stores_col_thm"><img src="{{ '/assets/kaigi01/thm_stores01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="Hello hey"></figure>
         </a>
         <h4 class="stores_col_ttl">
           Hello hey
-          <a class="btn_link" href="" target="_blank"><span></span><span></span></a>
+          <a class="btn_link" href="https://hey.jp/events/hello-hey/" target="_blank"><span></span><span></span></a>
         </h4>
         <p class="stores_col_txt">
 毎月第二・第四 木曜日20:00〜行っています。heyってどんな会社なんだろう。何をやっていくんだろう。どういう人がいるんだろう。ちょっとでも興味を持ったら、カジュアルに遊びにきてください！
         </p>
       </div>
       <div>
-        <a href="" target="_blank">
+        <a href="https://stores.jp/" target="_blank">
           <figure class="stores_col_thm">
             <img src="{{ '/assets/kaigi01/thm_stores02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
           </figure>
         </a>
         <h4 class="stores_col_ttl">
           STORES.jp
-          <a class="btn_link" href="" target="_blank"><span></span><span></span></a>
+          <a class="btn_link" href="https://stores.jp/" target="_blank"><span></span><span></span></a>
         </h4>
         <p class="stores_col_txt">
           誰でも簡単に本格的なネットショップが作成できるサービス
@@ -781,16 +781,16 @@ title: 平成Ruby会議 01
   <div class="footer_inner container">
     <div>
       <div class="logo_s">
-        <a href="/kaigi01"><img src="{{ '/assets/kaigi01/logo_s.svg?v=' | append: site.github.build_revision | relative_url }}" alt="平成Ruby会議"></a>
+        <img src="{{ '/assets/kaigi01/logo_s.svg?v=' | append: site.github.build_revision | relative_url }}" alt="平成Ruby会議">
       </div>
       <ul>
-        <li class="footer_txt_jp"><span>主催</span>平成.rb</li>
-        <li class="footer_txt_jp"><span>後援</span>日本Rubyの会</li>
+        <li class="footer_txt_jp"><span>主催</span><a href="https://heiseirb.connpass.com/" target="_blank">平成.rb</a></li>
+        <li class="footer_txt_jp"><span>後援</span><a href="https://ruby-no-kai.org/" target="_blank">日本Rubyの会</a></li>
       </ul>
     </div>
     <div>
       <p class="footer_txt_en">Copyright heisei.rb 2019, this website is licensed under a CC By 4.0</p>
-      <p class="footer_txt_en">creative sponsor by STORES.jp</p>
+      <p class="footer_txt_en">creative sponsor by <a href="https://stores.jp/" target="_blank">STORES.jp</a></p>
     </div>
   </div>
 </footer>
