登壇者募集中スタイル追加

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -406,18 +406,18 @@ title: 平成Ruby会議 01
         <div class="breakline"></div>
 
         <div id="sche_b" class="schedules_b">
-          <article class="schedules_main_item __b_item __b_01">
+          <article class="schedules_main_item __b_item __b_01 hiring">
             <div class="schedules_main_item_header">
               <p class="schedules_main_item_header_time">13:45 - 14:00</p>
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_schedule01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_talk">heisei talk</div>
-                <p>fuqda</p>
-                <h4>OSS初心者がつまづきながらOSSマナーを学んでいく話初心者がつまづきながらOSSマナーを学んでいく話</h4>
+                <!-- <p>fuqda</p> -->
+                <h4>登壇者募集中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
