三角パターンparallax追加

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -201,9 +201,9 @@ title: 平成Ruby会議 01
       <br>みなさまのご参加を心よりお待ちしています。
     </p>
   </article>
-  <div class="shape shape_01"></div>
-  <div class="shape shape_02"></div>
-  <div class="shape shape_03"></div>
+  <div class="shape shape_01"><div class="rellax" data-rellax-speed="-2"></div></div>
+  <div class="shape shape_02"><div class="rellax" data-rellax-speed="-1"></div></div>
+  <div class="shape shape_03"><div class="rellax" data-rellax-speed="1"></div></div>
 </section>
 
 
@@ -227,7 +227,7 @@ title: 平成Ruby会議 01
       </div>
     </div>
   </div>
-  <div class="shape shape_05"></div>
+  <div class="shape shape_05"><div class="rellax" data-rellax-speed="-3"></div></div>
 </section>
 
 
@@ -633,8 +633,8 @@ title: 平成Ruby会議 01
       </div>
     </div><!--schedules_main-->
   </div><!--schedules_cont-->
-  <div class="shape shape_06"></div>
-  <div class="shape shape_07"></div>
+  <div class="shape shape_06"><div class="rellax" data-rellax-speed="-3"></div></div>
+  <div class="shape shape_07"><div class="rellax" data-rellax-speed="-2"></div></div>
 </section>
 
 
@@ -689,8 +689,8 @@ title: 平成Ruby会議 01
   <div class="btn_main">
     <a href="" target="_blank">become a sponsor</a>
   </div>
-  <div class="shape shape_08"></div>
-  <div class="shape shape_04"></div>
+  <!-- <div class="shape shape_08"><div class="rellax" data-rellax-speed="-2"></div></div>
+  <div class="shape shape_04"><div class="rellax" data-rellax-speed="-1"></div></div> -->
 </section>
 
 
