スマホスタイル調整

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -689,8 +689,6 @@ title: 平成Ruby会議 01
   <div class="btn_main">
     <a href="" target="_blank">become a sponsor</a>
   </div>
-  <!-- <div class="shape shape_08"><div class="rellax" data-rellax-speed="-2"></div></div>
-  <div class="shape shape_04"><div class="rellax" data-rellax-speed="-1"></div></div> -->
 </section>
 
 
@@ -799,7 +797,7 @@ title: 平成Ruby会議 01
 
 
 <!-- scripts -->
-<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
 <script src="{{ '/assets/js/vendor/rellax.js?v=' | append: site.github.build_revision | relative_url }}"></script>
 <script src="{{ '/assets/js/kaigi01.js?v=' | append: site.github.build_revision | relative_url }}"></script>
