スタイル微調整

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -262,7 +262,7 @@ title: 平成Ruby会議 01
               <div class="schedules_main_item_body_txt">
                 <div class="tag_talk">heisei talk</div>
                 <p>fuqda</p>
-                <h4>OSS初心者がつまづきながらOSSマナーを学んでいく話初心者がつまづきながらOSSマナーを学んでいく話</h4>
+                <h4>OSS初心者がつまづきながらOSSマナーを学んでいく話初心者がつまづきながらOSSマナー</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
