実機丸角バグ修正

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -730,12 +730,12 @@ title: 平成Ruby会議 01
 
 
 <section class="stores">
-  <div class="stores_pttn01 rellax" data-rellax-speed="1"></div>
-  <div class="stores_pttn02 rellax" data-rellax-speed="1"></div>
   <div class="stores_inner">
+      <div class="stores_pttn01 rellax" data-rellax-speed="1"></div>
+      <div class="stores_pttn02 rellax" data-rellax-speed="1"></div>
     <div class="stores_ttl">クリエイティブスポンサー & PR by STORES.jp</div>
     <h2><img class="stores_logo" src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp"></h2>
-    <h3>Rubyエンジニアを募集しています！</h3>
+    <h3>Rubyエンジニアを<br class="sp">募集しています！</h3>
     <div class="btn_main">
       <a href="https://hey.jp/jobs/" target="_blank">採用ページはこちら</a>
     </div>
