FB第一弾修正

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -155,7 +155,7 @@ title: 平成Ruby会議 01
           </svg>
         </figure>
         <figure class="visual_ruby">
-          <img rellax" data-rellax-speed="-1" src="{{ '/assets/kaigi01/v_ruby.png?v=' | append: site.github.build_revision | relative_url }}" alt="Ruby">
+          <img class="rellax" data-rellax-speed="-1" src="{{ '/assets/kaigi01/v_ruby.png?v=' | append: site.github.build_revision | relative_url }}" alt="Ruby">
         </figure>
       </div><!--.visual_inner-->
     </div>
@@ -406,7 +406,7 @@ title: 平成Ruby会議 01
         <div class="breakline"></div>
 
         <div id="sche_b" class="schedules_b">
-          <article class="schedules_main_item __b_item __b_01 hiring">
+          <article class="schedules_main_item __b_item __b_01 __hiring">
             <div class="schedules_main_item_header">
               <p class="schedules_main_item_header_time">13:45 - 14:00</p>
             </div>
@@ -654,36 +654,13 @@ title: 平成Ruby会議 01
       <a class="spns_txt" href="" target="_blank">ストアーズ・ドット・ジェーピー 株式会社</a>
     </div><!--.spns_item-->
   </div>
-  <div class="spns_col spns_col_3">
-    <div class="spns_item tag_venueSpns">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="DRECOM">
-      </figure>
-      <a class="spns_txt" href="" target="_blank">株式会社 ドリコム</a>
-    </div><!--.spns_item-->
+  <div class="spns_col spns_col_2">
+  <!-- <div class="spns_col spns_col_3"> -->
     <div class="spns_item">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="DRECOM">
+      <figure class="spns_thm __hiring">
+        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="DRECOM"> -->
       </figure>
-      <a class="spns_txt" href="" target="_blank">株式会社 ドリコム</a>
-    </div><!--.spns_item-->
-    <div class="spns_item">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="DRECOM">
-      </figure>
-      <a class="spns_txt" href="" target="_blank">株式会社</a>
-    </div><!--.spns_item-->
-    <div class="spns_item">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="DRECOM">
-      </figure>
-      <a class="spns_txt" href="" target="_blank">株式会社</a>
-    </div><!--.spns_item-->
-    <div class="spns_item">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="DRECOM">
-      </figure>
-      <a class="spns_txt" href="" target="_blank">株式会社</a>
+      <!-- <a class="spns_txt" href="" target="_blank">株式会社 ドリコム</a> -->
     </div><!--.spns_item-->
   </div>
   <div class="btn_main">
@@ -722,6 +699,12 @@ title: 平成Ruby会議 01
     <div class="organizers_item">
       <figure class="organizers_thm">
         <img src="{{ '/assets/kaigi01/thm_organizers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
+      </figure>
+      <p class="organizers_txt"><a href="" target="_blank">@tashiro_rb</a></p>
+    </div><!-- .organizers_item -->
+    <div class="organizers_item">
+      <figure class="organizers_thm">
+        <img src="{{ '/assets/kaigi01/thm_organizers02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp">
       </figure>
       <p class="organizers_txt"><a href="" target="_blank">@tashiro_rb</a></p>
     </div><!-- .organizers_item -->
@@ -785,11 +768,11 @@ title: 平成Ruby会議 01
       </div>
       <ul>
         <li class="footer_txt_jp"><span>主催</span><a href="https://heiseirb.connpass.com/" target="_blank">平成.rb</a></li>
-        <li class="footer_txt_jp"><span>後援</span><a href="https://ruby-no-kai.org/" target="_blank">日本Rubyの会</a></li>
+        <li class="footer_txt_jp"><span>後援</span><a href="https://ruby-no-kai.org/" target="_blank">一般社団法人 日本Rubyの会</a></li>
       </ul>
     </div>
     <div>
-      <p class="footer_txt_en">Copyright heisei.rb 2019, this website is licensed under a CC By 4.0</p>
+      <p class="footer_txt_en">Heisei RubyKaigi 01 &copy;2019</p>
       <p class="footer_txt_en">creative sponsor by <a href="https://stores.jp/" target="_blank">STORES.jp</a></p>
     </div>
   </div>
