ラベル色統合

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -335,7 +335,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_proposal">proposal</div>
+                <div class="tag_talk">proposal</div>
                 <p>fuqda</p>
                 <h4>モブプロ</h4>
               </div>
@@ -490,7 +490,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_proposal">proposal</div>
+                <div class="tag_talk">proposal</div>
                 <p>fuqda</p>
                 <h4>平成.rb過去問</h4>
               </div>
