sessionラベル統合

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -260,7 +260,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく話初心者がつまづきながらOSSマナー</h4>
               </div>
@@ -275,7 +275,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -290,7 +290,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -305,7 +305,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -320,7 +320,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -335,7 +335,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">proposal</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>モブプロ</h4>
               </div>
@@ -350,7 +350,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -365,7 +365,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -380,7 +380,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -395,7 +395,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -415,7 +415,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <!-- <p>fuqda</p> -->
                 <h4>登壇者募集中</h4>
               </div>
@@ -430,7 +430,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -445,7 +445,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -460,7 +460,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -475,7 +475,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -490,7 +490,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">proposal</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>平成.rb過去問</h4>
               </div>
@@ -505,7 +505,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -520,7 +520,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -535,7 +535,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
@@ -550,7 +550,7 @@ title: 平成Ruby会議 01
                 <img src="{{ '/assets/kaigi01/thm_schedule02.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
-                <div class="tag_talk">heisei talk</div>
+                <div class="tag_session">session</div>
                 <p>fuqda</p>
                 <h4>OSS初心者がつまづきながらOSSマナーを学んでいく</h4>
               </div>
