FB第二弾修正

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -728,7 +728,7 @@ title: 平成Ruby会議 01
           <figure class="stores_col_thm"><img src="{{ '/assets/kaigi01/thm_stores01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="Hello hey"></figure>
         </a>
         <h4 class="stores_col_ttl">
-          Hello hey
+          <a href="https://hey.jp/events/hello-hey/" target="_blank">Hello hey</a>
           <a class="btn_link" href="https://hey.jp/events/hello-hey/" target="_blank"><span></span><span></span></a>
         </h4>
         <p class="stores_col_txt">
@@ -742,7 +742,7 @@ title: 平成Ruby会議 01
           </figure>
         </a>
         <h4 class="stores_col_ttl">
-          STORES.jp
+          <a href="https://stores.jp/" target="_blank">STORES.jp</a>
           <a class="btn_link" href="https://stores.jp/" target="_blank"><span></span><span></span></a>
         </h4>
         <p class="stores_col_txt">
@@ -781,6 +781,5 @@ title: 平成Ruby会議 01
 
 <!-- scripts -->
 <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
 <script src="{{ '/assets/js/vendor/rellax.js?v=' | append: site.github.build_revision | relative_url }}"></script>
 <script src="{{ '/assets/js/kaigi01.js?v=' | append: site.github.build_revision | relative_url }}"></script>
