--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -173,7 +173,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       <div class="notice_i">i</div>
       <div class="notice_cont"></div>
       <p class="notice_txt">
-        ご参加前に<a href="/coc/" class="notice_link" target="_blank">アンチハラスメントポリシー</a>をご一読ください
+        ご参加前に<a href="/code-of-conduct/" class="notice_link" target="_blank">アンチハラスメントポリシー</a>をご一読ください
       </p>
     </div>
 
