--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -803,6 +803,6 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
 
 
 <!-- scripts -->
-<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ '/assets/js/vendor/rellax.js?v=' | append: site.github.build_revision | relative_url }}"></script>
 <script src="{{ '/assets/js/kaigi01.js?v=' | append: site.github.build_revision | relative_url }}"></script>
