add links in sponsor thumbnails

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -637,53 +637,69 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
   <h2 class="ttl_main">Sponsors</h2>
   <div class="spns_col spns_col_2">
     <div class="spns_item tag_venueSpns">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
-      </figure>
+      <a href="https://www.drecom.co.jp/" target="_blank">
+        <figure class="spns_thm">
+          <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+        </figure>
+      </a>
       <a class="spns_txt" href="https://www.drecom.co.jp/" target="_blank">株式会社 ドリコム</a>
     </div><!--.spns_item-->
     <div class="spns_item tag_creativeSpns">
-      <figure class="spns_thm">
-        <img src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="">
-      </figure>
+      <a href="https://stores.jp/" target="_blank">
+        <figure class="spns_thm">
+          <img src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+        </figure>
+      </a>
       <a class="spns_txt" href="https://stores.jp/" target="_blank">ストアーズ・ドット・ジェーピー 株式会社</a>
     </div><!--.spns_item-->
   </div>
   <div class="spns_col spns_col_3">
     <div class="spns_item">
-      <figure class="spns_thm __hiring">
-        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
-      </figure>
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a> -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
     <div class="spns_item">
-      <figure class="spns_thm __hiring">
-        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
-      </figure>
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a>  -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
     <div class="spns_item">
-      <figure class="spns_thm __hiring">
-        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
-      </figure>
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a> -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
     <div class="spns_item">
-      <figure class="spns_thm __hiring">
-        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
-      </figure>
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a> -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
     <div class="spns_item">
-      <figure class="spns_thm __hiring">
-        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
-      </figure>
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a> -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
     <div class="spns_item">
-      <figure class="spns_thm __hiring">
-        <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
-      </figure>
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a> -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
   </div>
